[package]
name = "advent-of-code-2022"
version = "0.1.0"
default-run="intro"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# substring = "1.4.5"

[[bin]]
name="intro"
path="src/main.rs"

[[bin]]
name="d1p1"
path="src/day1/src/part1.rs"

[[bin]]
name="d1p2"
path="src/day1/src/part2.rs"

[[bin]]
name="d2p1"
path="src/day2/src/part1.rs"

[[bin]]
name="d2p2"
path="src/day2/src/part2.rs"

[[bin]]
name="d3p1"
path="src/day3/src/part1.rs"

[[bin]]
name="d3p2"
path="src/day3/src/part2.rs"

[[bin]]
name="d4p1"
path="src/day4/src/part1.rs"

[[bin]]
name="d4p2"
path="src/day4/src/part2.rs"

[[bin]]
name="d5p1"
path="src/day5/src/part1.rs"

[[bin]]
name="d5p2"
path="src/day5/src/part2.rs"

[[bin]]
name="d6p1"
path="src/day6/src/part1.rs"

[[bin]]
name="d6p2"
path="src/day6/src/part2.rs"
